# zip_code_basic_api_cli

./: Makefile  database.py  main.py  models.py  pyproject.toml  schemas.py  setup.cfg  zip_codes.py
zip_code/: cli.py  create_table.py
zip_code_files/: US.txt  download_zip_codes.py  upload_to_postgres.py
