[tool.poetry]
name = "zip_code"
version = "0.1.0"
description = ""
authors = ["finswimmer <finswimmer@example.org>"]

[tool.poetry.scripts]
cli_script = "zip_code.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
config = "^0.5.1"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
pandas = "^2.2.3"
wheel = "^0.45.1"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
extend-exclude = "./zip_code_files"
